--- a/Module1/Views/ViewA.xaml
+++ b/Module1/Views/ViewA.xaml
@@ -9,8 +9,13 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
     <Grid>
-        <TextBlock Text="{Binding Message}"
+        <StackPanel
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
+            <TextBlock Text="{Binding Message}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center" />
+            <CheckBox IsChecked="{Binding IsActive}" Content="{Binding IsActive}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
